deploy/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: efatura
  labels:
    name: efatura
    environment: production
